# VeD-LaNg

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md  RELEASE_PLAN_V1_OPEN_WORLD.md  SECURITY.md  audit.toml  install.sh  website.ved
.github/workflows/: ci.yml  release.yml
benches/: README.md
docs/: README.md
examples/: api.ved  counter.ved  dashboard.ved  flow.ved  futurist.ved  ghost.ved  hello.ved  live_collab.ved  safe.ved  simple.ved  simple_screen.ved  stream.ved  todo.ved  websocket.ved
examples/auth/: app.ved
examples/todo/: client.ved  legacy_todo.ved  server.ved
scripts/: release-check.sh
src/: errors.rs  main.rs
src/ast/: mod.rs
src/compiler/: fullstack.rs  mod.rs  native.rs  server.rs  tests.rs  web.rs
src/deploy/: docker.rs
src/dev/: mod.rs  overlay.rs  server.rs
src/interpreter/: mod.rs
src/lexer/: mod.rs  span.rs  token.rs
src/lsp/: mod.rs
src/optimize/: minify.rs  mod.rs  tree_shake.rs
src/parser/: cursor.rs  mod.rs
src/pkg/: mod.rs
src/runtime/: animations.rs  auth.rs  db.rs  mod.rs  server.rs  web.rs
src/stdlib/: mod.rs
src/typeck/: mod.rs
tests/: README.md
vscode/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  ved-lang-1.0.0.vsix
vscode/snippets/: ved.code-snippets
vscode/src/: extension.ts
vscode/syntaxes/: ved.tmLanguage.json
website/css/: style.css
website/demo/counter/: Cargo.toml  index.html
website/demo/counter/src/: lib.rs
website/demo/todo/: Cargo.toml  index.html
website/demo/todo/src/: lib.rs
website_out/: Cargo.toml  index.html  vercel.json
website_out/src/: lib.rs
workflows/: release.yml
