[package]
name = "ved"
version = "1.0.0"
edition = "2021"
description = "VED Language Compiler - A unified language for frontend, backend, and systems programming"
authors = ["VED Contributors <contributors@ved-lang.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vornyx-rs/VeD-LaNg"
keywords = ["language", "compiler", "web", "rust", "wasm"]
categories = ["compilers", "web-programming", "development-tools"]
rust-version = "1.75"

[[bin]]
name = "vedc"
path = "src/main.rs"

[features]
default = []
webgpu = ["dep:wgpu", "dep:pollster"]

[dependencies]
logos = "0.14"
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.2", features = ["fancy"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio-tungstenite = "0.23"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "macros"] }
jsonwebtoken = "9.3"
indexmap = "2.2"
smol_str = "0.3"
rustc-hash = "2.0"
unicode-width = "0.1"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }

[dev-dependencies]
insta = "1.39"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
